Fixed collapsing navbar element.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,12 +26,27 @@ h2 {
     text-align: center;
 }
 
+
+/* -- Nav Bar -- */
 .nav-bar {
     background-color: black;
     min-width: 100%;
     min-height: 5%;
     position: fixed; bottom: 0;
     
+}
+
+/* - Nav Bar Toggle - */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 .image-title {
